--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,12 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+fs_permissions = [
+    { access = "read", path = "./images/" },
+    { access = "read", path = "./broadcast" },
+    { access = "read", path = "./baseConverted" },
+]
+
+remappings = ["@openzeppelin/contracts=lib/openzeppelin-contracts/contracts"]
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
