--- a/foundry.toml
+++ b/foundry.toml
@@ -3,6 +3,10 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+ffi = true
+
+fs_permissions = [{ access = "read", path = "./img/"}]
+
 # fs_permissions = [
 #     { access = "read", path = "./images/" },
 #     { access = "read", path = "./broadcast" },
