I think I have finally fixed the issue....Yeah, I have said that before

--- a/foundry.toml
+++ b/foundry.toml
@@ -8,7 +8,7 @@ ffi = true
 fs_permissions = [
     { access = "read", path = "./img" },
     { access = "read", path = "./broadcast" },
-    { access = "read", path = "./baseConverted" },
+    # { access = "read", path = "./baseConverted" }, 
 ]
 
 remappings = ["@openzeppelin/contracts=lib/openzeppelin-contracts/contracts"]
